# correct repo direction

--- a/_includes/utterances.html
+++ b/_includes/utterances.html
@@ -6,7 +6,7 @@
 
     var script = document.createElement("script");
     script.src = "https://utteranc.es/client.js";
-    script.setAttribute("repo", "thomaslamy/Website_tlamy");
+    script.setAttribute("repo", "ThomasLamy/Website");
     script.setAttribute("issue-term", "title");
     script.setAttribute("crossorigin", "anonymous");
     script.setAttribute("label", "comments 💬");
